<?xml version="1.0" encoding="UTF-8"?>
<!--
  SwarmForge - Eusocial Insect Simulation
  
  MIT License
  Copyright (c) 2022-2026 Silvère Martin-Michiellot
  AI Assistant: Gemini (Google DeepMind)
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.swarmforge</groupId>
    <artifactId>swarmforge-parent</artifactId>
    <version>2.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>SwarmForge</name>
    <description>GPU-accelerated eusocial insect simulation platform</description>
    <url>https://github.com/swarmforge/swarmforge</url>
    <inceptionYear>2022</inceptionYear>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>silvere</id>
            <name>Silvère Martin-Michiellot</name>
            <roles>
                <role>Lead Developer</role>
            </roles>
        </developer>
        <developer>
            <id>gemini</id>
            <name>Gemini AI Assistant</name>
            <organization>Google DeepMind</organization>
        </developer>
    </developers>

    <modules>
        <module>swarmforge-core</module>
        <module>swarmforge-server</module>
        <module>swarmforge-editor</module>        <!-- Asset Editor (Terrain, Species, Weather) -->
        <module>swarmforge-client</module>        <!-- Simulation Viewer -->
        <module>swarmforge-compute</module>        <!-- Distributed Compute Node -->
        <module>swarmforge-plugins</module>
        <module>swarmforge-benchmarks</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Dependencies -->
        <jmonkeyengine.version>3.6.1-stable</jmonkeyengine.version>
        <javafx.version>21.0.1</javafx.version>
        <grpc.version>1.60.0</grpc.version>
        <flatbuffers.version>23.5.26</flatbuffers.version>
        <postgresql.version>42.7.1</postgresql.version>
        <lettuce.version>6.3.0.RELEASE</lettuce.version>
        <log4j.version>2.22.0</log4j.version>
        <junit.version>5.10.1</junit.version>
        <jackson.version>2.16.1</jackson.version>
        <guava.version>32.1.3-jre</guava.version>
        <jjwt.version>0.11.5</jjwt.version>
        <bcrypt.version>0.4</bcrypt.version>
        <netty.tcnative.version>2.0.61.Final</netty.tcnative.version>
        <protobuf.version>3.25.1</protobuf.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- SwarmForge Modules -->
            <dependency>
                <groupId>org.swarmforge</groupId>
                <artifactId>swarmforge-core</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- jMonkeyEngine -->
            <dependency>
                <groupId>org.jmonkeyengine</groupId>
                <artifactId>jme3-core</artifactId>
                <version>${jmonkeyengine.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jmonkeyengine</groupId>
                <artifactId>jme3-terrain</artifactId>
                <version>${jmonkeyengine.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jmonkeyengine</groupId>
                <artifactId>jme3-desktop</artifactId>
                <version>${jmonkeyengine.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jmonkeyengine</groupId>
                <artifactId>jme3-lwjgl3</artifactId>
                <version>${jmonkeyengine.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jmonkeyengine</groupId>
                <artifactId>jme3-plugins</artifactId>
                <version>${jmonkeyengine.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jmonkeyengine</groupId>
                <artifactId>jme3-jogg</artifactId>
                <version>${jmonkeyengine.version}</version>
            </dependency>

            <!-- JavaFX -->
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-controls</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-fxml</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-media</artifactId>
                <version>${javafx.version}</version>
            </dependency>

            <!-- gRPC -->
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-bom</artifactId>
                <version>${grpc.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- FlatBuffers -->
            <dependency>
                <groupId>com.google.flatbuffers</groupId>
                <artifactId>flatbuffers-java</artifactId>
                <version>${flatbuffers.version}</version>
            </dependency>

            <!-- Database -->
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgresql.version}</version>
            </dependency>
            <dependency>
                <groupId>io.lettuce</groupId>
                <artifactId>lettuce-core</artifactId>
                <version>${lettuce.version}</version>
            </dependency>

            <!-- Logging -->
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-api</artifactId>
                <version>${log4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>${log4j.version}</version>
            </dependency>

            <!-- Utilities -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>

            <!-- Testing -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>5.8.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-inline</artifactId>
                <version>5.2.0</version>
                <scope>test</scope>
            </dependency>
            <!-- Native OS Integration (JNA) -->
            <dependency>
                <groupId>net.java.dev.jna</groupId>
                <artifactId>jna</artifactId>
                <version>5.14.0</version>
            </dependency>
            <dependency>
                <groupId>net.java.dev.jna</groupId>
                <artifactId>jna-platform</artifactId>
                <version>5.14.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>

            <!-- Unit Test Runner -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <argLine>@{argLine} --enable-native-access=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>

            <!-- JavaDoc Generation -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.6.3</version>
                <configuration>
                    <outputDirectory>${project.basedir}/javadoc</outputDirectory>
                    <reportOutputDirectory>${project.basedir}/javadoc</reportOutputDirectory>
                    <destDir>.</destDir>
                    <doclint>none</doclint>
                    <failOnError>false</failOnError>
                    <show>protected</show>
                    <windowtitle>SwarmForge API Documentation</windowtitle>
                    <doctitle>SwarmForge ${project.version} API</doctitle>
                    <bottom>Copyright © 2022-2026 Silvère Martin-Michiellot. AI Assistant: Gemini. MIT License.</bottom>
                </configuration>
                <executions>
                    <execution>
                        <id>generate-javadoc</id>
                        <phase>site</phase>
                        <goals>
                            <goal>aggregate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Code Coverage -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.13</version>
                <configuration>
                    <excludes>
                        <exclude>sun/**</exclude>
                        <exclude>com/sun/**</exclude>
                        <exclude>jdk/internal/**</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>